firmware/lib/control-table/tests/ui/enum_missing_repr.stderr
error: Enum derive requires #[repr(u8)]
 --> tests/ui/enum_missing_repr.rs:4:6
  |
4 | enum MissingRepr {
  |      ^^^^^^^^^^^
