firmware/lib/control-table/tests/ui/enum_missing_repr.rs
use control_table::Enum;

#[derive(Enum)]
enum MissingRepr {
    A = 0,
    B = 1,
}

fn main() {}
